[gd_scene load_steps=2 format=3 uid="uid://8aqeeek0hon7"]

[ext_resource type="Script" path="res://globals/music_manager.gd" id="1_ssmeu"]

[node name="MusicManager" type="Node"]
process_mode = 3
script = ExtResource("1_ssmeu")

[node name="Track1" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Track2" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[connection signal="finished" from="Track1" to="." method="_track_finished"]
[connection signal="finished" from="Track2" to="." method="_track_finished"]
